        example showing how to use mixed() with effects package for plotting.
        
    o   set_data_arg argument of mixed() is now per default controlled via 
        afex_options("set_data_arg"). The default has also changed from TRUE to 
        FALSE. The reason for this change is that FALSE appears to work better 
        with emmeans. Specifically, also when 
        
    o   afex_aov objects have received an additional attribute, 
        "incomplete_cases", that contains the IDs of removed participants due to 
        missing values (thanks to Frederik Aust).
    
    Bugfixes

    o   removed bug in mixed that caused a crash if check_contrasts = FALSE 
        and the data contained missing values in the IVs.
        
    o   removed bug that caused a crash under certain conditions if 
        stringsAsFactors was set to FALSE in the global options and repeated 
        measures factors were present (thanks to Will Hopper for the bug report 
        and simultaneous fix).
        
    o   set_data_arg now works for lmer_alt and mixed(..., return = "merMod"). 
        This allows to use those objects with e.g., the effects package.
        
    o   afex should now work with car version 3.0.

    
                    *************************
                    ** afex VERSION 0.19-x **
                    *************************
                    
                    Changes in afex Version 0.19-0
                    Released January 2018
                    
    Significant User Visible Changes and New Features
    
    o   afex now works with emmeans (successor of lsmeans pckage).
    
    Bugfixes

    o   lsmeans did not work with mixed objects if type=2 and method used nested
        model comparions (e.g., LRT or PB).
        
    o   removed warning 'Error() model is singular' when units of observations 
        have missing values for ANOVAs.



                    *************************
                    ** afex VERSION 0.18-x **